# ags_example_cpp_lib

./: CMakeLists.txt  README.rst
ags_blosc_wrapper/inc/activision_game_science/: blosc_wrapper.h  blosc_wrapper_capi.h
ags_blosc_wrapper/src/: blosc_wrapper.cpp  blosc_wrapper_capi.cpp
ags_example_cpp_lib/inc/activision_game_science/: blosc_wrapper.h
ags_example_cpp_lib/src/: blosc_wrapper.cpp  blosc_wrapper_capi.cpp
cmake/Modules/: FindCBLOSC.cmake
